package com.kinexus.back.model.empresas;

import jakarta.persistence.*;
import lombok.*;
import java.time.LocalDateTime;
import java.util.*;
import com.fasterxml.jackson.annotation.JsonIdentityInfo;
import com.fasterxml.jackson.annotation.JsonIgnore;
import com.fasterxml.jackson.annotation.ObjectIdGenerators;

@Entity
@JsonIdentityInfo(generator = ObjectIdGenerators.PropertyGenerator.class, property = "id")
@Table(name = "sesiones_empresa")
@Getter @Setter @NoArgsConstructor @AllArgsConstructor @Builder
public class SesionEmpresaEntity {
    @Id @GeneratedValue(strategy = GenerationType.AUTO)
    private UUID id;

    @ManyToOne
    @JoinColumn(name = "sucursal_id")
    @JsonIgnore
    private SucursalEntity sucursal;

    private LocalDateTime fechaHora;
    private String estado;
    private String descripcionClinica;
    @Builder.Default
    private Integer asistencia = 0;

    @OneToMany(mappedBy = "sesion", cascade = CascadeType.ALL)
    private List<SesionTrabajadorEntity> asistencias;
}
