' Generated by UML Generator
' Encoded: fLRRRjim37ttL-WvG80z6qFHBYtG0DrG8Ca7C3BhiDF5aEG1wx1_dwJCZcKfRRAzAUI9HFASm-JMEZ2kbwAotqbrO40oBi3QE-SCxNk7QwxLXjwGVQeEr23ZPBZ0geeejhCz6D8FiZDeuK4vSZ_Phugn9JKrs-tMz-5iUzuR2w9ccx-d8pBab9PxWpxZtrDjY603_hjhvR154m8jAZHw2db1Ve1lm4aIAkTJz-0m93YODa4sP3bq7XalFSN1adMeE86jsPC_VzwW9Qss1lRm2eqsnn9lgjz3hnyqcJV2gP-zsg6nMi7TQbwcGu4lMYKnb40YxSKWvxx85LZu2Zx-bgJHSaDT02Hl2b0uDFdiFoHzt0J8mQUq8H0Zxd68pC3ZC9wX_OZry73DiXT3IkeZQxhVYyYRHASR7IvD9k3LcKSZ-SVWa-OW0lTRadWgBbNPLPMfNdgjdLGG9ZAHOiP9YRYHfmION1c7N39FvCD6AMAgp7DCb7LRC674rQnmMqZtIJ5rqTcfSMhsHMk1eEQr_CSsYDm-QWDpRaSrd57yIf0Y3cMBJvNs3yOlco5l38VPPKDprEaBh1gxFwlgJA_NL91lf_TgMFjPqcIjnk0MZIGrYVu0eSrqjaVpR4RrJempa7uITS9zb7tdFJqkglb-YNmKVsuMo-LSIKMS3hWYrrKEp9T3ZYdheifNuw9uuMnBNGGApnQTMS2LZ7vcMIokXvUhAFY_G4y9zWuxP_mNBfvDFdF89HYT5rW6PSHMjwWQ_-Vf3m
' URL: http://www.plantuml.com/plantuml/uml/fLRRRjim37ttL-WvG80z6qFHBYtG0DrG8Ca7C3BhiDF5aEG1wx1_dwJCZcKfRRAzAUI9HFASm-JMEZ2kbwAotqbrO40oBi3QE-SCxNk7QwxLXjwGVQeEr23ZPBZ0geeejhCz6D8FiZDeuK4vSZ_Phugn9JKrs-tMz-5iUzuR2w9ccx-d8pBab9PxWpxZtrDjY603_hjhvR154m8jAZHw2db1Ve1lm4aIAkTJz-0m93YODa4sP3bq7XalFSN1adMeE86jsPC_VzwW9Qss1lRm2eqsnn9lgjz3hnyqcJV2gP-zsg6nMi7TQbwcGu4lMYKnb40YxSKWvxx85LZu2Zx-bgJHSaDT02Hl2b0uDFdiFoHzt0J8mQUq8H0Zxd68pC3ZC9wX_OZry73DiXT3IkeZQxhVYyYRHASR7IvD9k3LcKSZ-SVWa-OW0lTRadWgBbNPLPMfNdgjdLGG9ZAHOiP9YRYHfmION1c7N39FvCD6AMAgp7DCb7LRC674rQnmMqZtIJ5rqTcfSMhsHMk1eEQr_CSsYDm-QWDpRaSrd57yIf0Y3cMBJvNs3yOlco5l38VPPKDprEaBh1gxFwlgJA_NL91lf_TgMFjPqcIjnk0MZIGrYVu0eSrqjaVpR4RrJempa7uITS9zb7tdFJqkglb-YNmKVsuMo-LSIKMS3hWYrrKEp9T3ZYdheifNuw9uuMnBNGGApnQTMS2LZ7vcMIokXvUhAFY_G4y9zWuxP_mNBfvDFdF89HYT5rW6PSHMjwWQ_-Vf3m
' Generated on: 2025-10-24T19:12:56.791059895

@startuml
skinparam classAttributeIconSize 0
hide circle

class UsuarioEmpresaEntity {
  -id: UUID
  -sucursal: SucursalEntity
  -nombre: String
  -edad: Integer
  -genero: String
  -fechaNacimiento: Date
  -cargo: String
  -discapacidad: String
  -asistencias: List<SesionTrabajadorEntity>
}

class EmpresaEntity {
  -id: UUID
  -nombre: String
  -ciudad: String
  -personaACargo: String
  -telefono: String
  -email: String
  -direccionCasaMatriz: String
  -descripcion: String
  -planes: List<PlanEmpresaEntity>
  -historiales: List<HistorialEmpresaEntity>
}

class PagoEmpresaEntity {
  -id: UUID
  -plan: PlanEmpresaEntity
  -monto: Double
  -metodoPago: String
  -estadoPago: String
  -fechaPago: LocalDateTime
}

class SucursalEntity {
  -id: UUID
  -plan: PlanEmpresaEntity
  -numeroTrabajadores: Integer
  -email: String
  -telefono: String
  -direccion: String
  -trabajadores: List<UsuarioEmpresaEntity>
  -sesiones: List<SesionEmpresaEntity>
}

class SesionTrabajadorEntity {
  -id: UUID
  -sesion: SesionEmpresaEntity
  -usuarioEmpresa: UsuarioEmpresaEntity
  -asistencia: Boolean
}

class SesionEmpresaEntity {
  -id: UUID
  -sucursal: SucursalEntity
  -fechaHora: LocalDateTime
  -estado: String
  -descripcionClinica: String
  -asistencia: Double
  -asistencias: List<SesionTrabajadorEntity>
}

class HistorialEmpresaEntity {
  -id: UUID
  -empresa: EmpresaEntity
  -tipo: String
  -descripcion: String
  -fecha: LocalDateTime
}

class PlanEmpresaEntity {
  -id: UUID
  -empresa: EmpresaEntity
  -nombre: String
  -descripcion: String
  -fechaInicio: Date
  -fechaTermino: Date
  -valor: Double
  -numeroSesiones: Integer
  -sucursales: List<SucursalEntity>
  -pagos: List<PagoEmpresaEntity>
}

UsuarioEmpresaEntity *-- SucursalEntity
UsuarioEmpresaEntity o-- SesionTrabajadorEntity
EmpresaEntity o-- PlanEmpresaEntity
EmpresaEntity o-- HistorialEmpresaEntity
PagoEmpresaEntity *-- PlanEmpresaEntity
SucursalEntity *-- PlanEmpresaEntity
SucursalEntity o-- UsuarioEmpresaEntity
SucursalEntity o-- SesionEmpresaEntity
SesionTrabajadorEntity *-- SesionEmpresaEntity
SesionTrabajadorEntity *-- UsuarioEmpresaEntity
SesionEmpresaEntity *-- SucursalEntity
SesionEmpresaEntity o-- SesionTrabajadorEntity
HistorialEmpresaEntity *-- EmpresaEntity
PlanEmpresaEntity *-- EmpresaEntity
PlanEmpresaEntity o-- SucursalEntity
PlanEmpresaEntity o-- PagoEmpresaEntity
@enduml